--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc --watch && npx prisma generate",
+    "build": "tsc -p . && npx prisma generate",
     "start": "node dist/index.js"
   },
   "dependencies": {
